# getsympos

./: .gitignore  README.md  getsympos.py  pyproject.toml
getsympos/: __init__.py  cli.py  getsympos.py
